Mise à jour du projet avec les dernières modifications

--- a/a-propos.html
+++ b/a-propos.html
@@ -840,21 +840,21 @@
           Notre mission est de propulser nos clients vers l’excellence grâce à des solutions sur-mesure, innovantes et responsables. Nous croyons en une approche collaborative, transparente et durable, où chaque projet est un partenariat de confiance.<br><br>
           Notre équipe réunit des talents locaux et internationaux, experts en développement web, marketing digital, cybersécurité, formation et accompagnement stratégique. Nous mettons l’humain, la qualité et l’éthique au cœur de chaque action.
         </p>
-        <h3 style="color:var(--vert);margin-bottom:1rem;"><i class="fas fa-seedling"></i> Notre croyance fondatrice</h3>
+        <h3 style="color:var(--vert);margin-bottom:1rem;">Notre croyance fondatrice</h3>
         <p style="font-size:1.13rem;color:var(--gris-texte);margin-bottom:2rem;">
           Chez Porokhane, nous croyons qu’un avenir digital inclusif peut faire émerger une Afrique forte.<br>
           C’est pourquoi nous levons chaque jour les barrières numériques – de l’apprentissage des jeunes à la productivité des entreprises.
         </p>
-        <h3 style="color:var(--bleu);margin-bottom:1rem;"><i class="fas fa-bullseye"></i> De la vision à l’action</h3>
+        <h3 style="color:var(--bleu);margin-bottom:1rem;">De la vision à l’action</h3>
         <ul style="font-size:1.08rem;color:var(--gris-texte);margin-bottom:2rem;list-style: none;padding-left:0;">
-          <li style="margin-bottom:0.7rem;"><i class="fas fa-user-graduate" style="color:var(--vert);margin-right:8px;"></i> Nous formons les jeunes pour qu’ils deviennent les bâtisseurs d’un numérique africain solide.</li>
-          <li style="margin-bottom:0.7rem;"><i class="fas fa-briefcase" style="color:var(--bleu);margin-right:8px;"></i> Nous accompagnons les entreprises pour qu’elles deviennent plus performantes, visibles et autonomes.</li>
-          <li><i class="fas fa-link" style="color:var(--vert);margin-right:8px;"></i> Nous tissons un pont entre ambition, technologie et impact durable.</li>
+          <li style="margin-bottom:0.7rem;"> Nous formons les jeunes pour qu’ils deviennent les bâtisseurs d’un numérique africain solide.</li>
+          <li style="margin-bottom:0.7rem;">Nous accompagnons les entreprises pour qu’elles deviennent plus performantes, visibles et autonomes.</li>
+          <li> Nous tissons un pont entre ambition, technologie et impact durable.</li>
         </ul>
-        <h3 style="color:var(--vert);margin-bottom:1rem;"><i class="fas fa-hands-helping"></i> Notre engagement en actions concrètes</h3>
+        <h3 style="color:var(--vert);margin-bottom:1rem;"> Notre engagement en actions concrètes</h3>
         <ul style="font-size:1.08rem;color:var(--gris-texte);list-style: none;padding-left:0;">
-          <li style="margin-bottom:0.7rem;"><i class="fas fa-project-diagram" style="color:var(--bleu);margin-right:8px;"></i> Projets numériques réalisés pour des PME</li>
-          <li><i class="fas fa-comments" style="color:var(--vert);margin-right:8px;"></i> Témoignages de stagiaires, clients et partenaires</li>
+          <li style="margin-bottom:0.7rem;"> Projets numériques réalisés pour des PME</li>
+          <li> Témoignages de stagiaires, clients et partenaires</li>
         </ul>
       </div>
     </div>
@@ -963,7 +963,7 @@
         </div>
         <div class="team-card">
           <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Directrice Technique">
-          <h4>Mme Ndiaye</h4>
+          <h4>Mlle Ndiaye</h4>
           <div class="role">Directrice Technique</div>
           <p>Pilote la stratégie, la qualité, l'innovation et le bien-être de l'équipe.</p>
         </div>
