--- a/audit_express.html
+++ b/audit_express.html
@@ -286,13 +286,13 @@
   </nav>
 
   <main class="audit-main">
-    <div class="audit-title"><i class="fas fa-search"></i> Audit Express Digital</div>
+    <div class="audit-title"> Audit Express Digital</div>
     <div class="audit-intro">Pourquoi un audit digital express ? Parce qu’un bon pilotage digital commence par un diagnostic clair. Notre méthode exclusive vous offre un état des lieux rapide, stratégique et actionnable de votre présence en ligne.</div>
-    <div class="audit-section-title"><i class="fas fa-cogs"></i> Notre méthode : rigueur, outils avancés & efficacité</div>
+    <div class="audit-section-title">Notre méthode : rigueur, outils avancés & efficacité</div>
     <ol class="audit-steps">
       <li class="audit-step">
         <div class="audit-step-num">1</div>
-        <div class="audit-step-title"><i class="fas fa-chart-bar"></i> Relevé des indicateurs clés (KPIs)</div>
+        <div class="audit-step-title">Relevé des indicateurs clés (KPIs)</div>
         <ul>
           <li>Trafic organique réel</li>
           <li>Mots-clés positionnés</li>
@@ -305,7 +305,7 @@
       </li>
       <li class="audit-step">
         <div class="audit-step-num">2</div>
-        <div class="audit-step-title"><i class="fas fa-sitemap"></i> Analyse technique & structurelle</div>
+        <div class="audit-step-title">Analyse technique & structurelle</div>
         <ul>
           <li>Structure du site</li>
           <li>Hiérarchie Hn & métadonnées</li>
@@ -315,7 +315,7 @@
       </li>
       <li class="audit-step">
         <div class="audit-step-num">3</div>
-        <div class="audit-step-title"><i class="fas fa-pen-nib"></i> Analyse sémantique & éditoriale</div>
+        <div class="audit-step-title">Analyse sémantique & éditoriale</div>
         <ul>
           <li>Qualité du contenu existant</li>
           <li>Opportunités de mots-clés</li>
@@ -324,7 +324,7 @@
       </li>
       <li class="audit-step">
         <div class="audit-step-num">4</div>
-        <div class="audit-step-title"><i class="fas fa-users"></i> Profilage digital de l’audience</div>
+        <div class="audit-step-title">Profilage digital de l’audience</div>
         <ul>
           <li>Comportement utilisateur</li>
           <li>Pages populaires</li>
@@ -333,7 +333,7 @@
       </li>
       <li class="audit-step">
         <div class="audit-step-num">5</div>
-        <div class="audit-step-title"><i class="fas fa-lightbulb"></i> Recommandations & plan d’action</div>
+        <div class="audit-step-title">Recommandations & plan d’action</div>
         <ul>
           <li>Checklist SEO/UX priorisée</li>
           <li>Plan court terme (Quick Wins)</li>
@@ -341,12 +341,12 @@
         </ul>
       </li>
     </ol>
-    <div class="audit-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Ce qui rend notre diagnostic unique</div>
+    <div class="audit-section-title" style="color:var(--vert);"> Ce qui rend notre diagnostic unique</div>
     <ul class="audit-unique-list">
-      <li><i class="fas fa-bolt"></i> Méthodologie agile & professionnelle</li>
-      <li><i class="fas fa-tools"></i> Outils de niveau international</li>
-      <li><i class="fas fa-globe-africa"></i> Approche terrain adaptée au contexte africain</li>
-      <li><i class="fas fa-file-alt"></i> Livrable clair & exploitable</li>
+      <li>Méthodologie agile & professionnelle</li>
+      <li>Outils de niveau international</li>
+      <li>Approche terrain adaptée au contexte africain</li>
+      <li>Livrable clair & exploitable</li>
     </ul>
     <div class="audit-contact">
       <strong>Contact :</strong> Pour bénéficier de votre audit express :<br>
