--- a/automatisation.html
+++ b/automatisation.html
@@ -147,13 +147,13 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-cogs"></i> Automatisation des Processus</div>
+    <div class="service-title">Automatisation des Processus</div>
     <div class="service-intro">Pourquoi automatiser vos tâches ?<br>Pour gagner en efficacité, réduire les erreurs et libérer du temps pour ce qui compte vraiment. Nous créons des solutions d’automatisation sur mesure, fiables et simples à utiliser.</div>
-    <div class="service-section-title"><i class="fas fa-cogs"></i> Notre méthode : écoute, ingénierie & impact immédiat</div>
+    <div class="service-section-title"> Notre méthode : écoute, ingénierie & impact immédiat</div>
     <ol class="service-steps">
       <li class="service-step">
         <div class="service-step-num">1</div>
-        <div class="service-step-title"><i class="fas fa-list-ol"></i> Cartographie des processus manuels</div>
+        <div class="service-step-title">Cartographie des processus manuels</div>
         <ul>
           <li>Identification des tâches répétitives</li>
           <li>Analyse des temps & des points de friction</li>
@@ -162,7 +162,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">2</div>
-        <div class="service-step-title"><i class="fas fa-robot"></i> Développement des automatisations</div>
+        <div class="service-step-title">Développement des automatisations</div>
         <ul>
           <li>Scripts personnalisés (Python, Node.js, etc.)</li>
           <li>Intégration via API ou plateformes (Zapier, Make, etc.)</li>
@@ -171,7 +171,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">3</div>
-        <div class="service-step-title"><i class="fas fa-vial"></i> Tests & mise en production</div>
+        <div class="service-step-title">Tests & mise en production</div>
         <ul>
           <li>Simulations & contrôles qualité</li>
           <li>Déploiement progressif</li>
@@ -180,7 +180,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">4</div>
-        <div class="service-step-title"><i class="fas fa-sync-alt"></i> Suivi & évolutivité</div>
+        <div class="service-step-title">Suivi & évolutivité</div>
         <ul>
           <li>Analyse des gains réalisés</li>
           <li>Amélioration continue</li>
@@ -188,12 +188,12 @@
         </ul>
       </li>
     </ol>
-    <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Ce qui rend notre approche unique</div>
+    <div class="service-section-title" style="color:var(--vert);">Ce qui rend notre approche unique</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-user-cog"></i> Expertise technique + compréhension métier</li>
-      <li><i class="fas fa-lightbulb"></i> Solutions pragmatiques et accessibles</li>
-      <li><i class="fas fa-shield-alt"></i> Automatisations robustes & sécurisées</li>
-      <li><i class="fas fa-chart-line"></i> Mesure d’impact chiffrée et tangible</li>
+      <li> Expertise technique + compréhension métier</li>
+      <li>Solutions pragmatiques et accessibles</li>
+      <li>Automatisations robustes & sécurisées</li>
+      <li> Mesure d’impact chiffrée et tangible</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour bénéficier d’une automatisation efficace :<br>
