--- a/base_donnee.html
+++ b/base_donnee.html
@@ -148,13 +148,13 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-database"></i> Gestion de Bases de Données</div>
+    <div class="service-title">Gestion de Bases de Données</div>
     <div class="service-intro">Pourquoi une base de données sur mesure ?<br>Parce qu’une bonne gestion de l’information commence par une structuration fiable, performante et évolutive. Nous concevons et administrons des bases de données qui s’adaptent à votre activité et à vos objectifs.</div>
-    <div class="service-section-title"><i class="fas fa-cogs"></i> Notre approche : précision, performance & sécurité</div>
+    <div class="service-section-title"> Notre approche : précision, performance & sécurité</div>
     <ol class="service-steps">
       <li class="service-step">
         <div class="service-step-num">1</div>
-        <div class="service-step-title"><i class="fas fa-search"></i> Analyse des besoins métiers</div>
+        <div class="service-step-title">Analyse des besoins métiers</div>
         <ul>
           <li>Recueil des données à traiter</li>
           <li>Définition des utilisateurs & droits d’accès</li>
@@ -163,7 +163,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">2</div>
-        <div class="service-step-title"><i class="fas fa-project-diagram"></i> Conception technique</div>
+        <div class="service-step-title"> Conception technique</div>
         <ul>
           <li>Choix des technologies adaptées (MySQL, PostgreSQL, MongoDB, etc.)</li>
           <li>Modélisation relationnelle ou NoSQL</li>
@@ -172,7 +172,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">3</div>
-        <div class="service-step-title"><i class="fas fa-shield-alt"></i> Déploiement & sécurisation</div>
+        <div class="service-step-title">Déploiement & sécurisation</div>
         <ul>
           <li>Hébergement sécurisé (cloud ou local)</li>
           <li>Mise en place de sauvegardes automatiques</li>
@@ -181,7 +181,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">4</div>
-        <div class="service-step-title"><i class="fas fa-sync-alt"></i> Suivi et optimisation continue</div>
+        <div class="service-step-title">Suivi et optimisation continue</div>
         <ul>
           <li>Monitoring des performances</li>
           <li>Ajustements en fonction des pics de charge</li>
@@ -189,12 +189,12 @@
         </ul>
       </li>
     </ol>
-    <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Ce qui rend notre service unique</div>
+    <div class="service-section-title" style="color:var(--vert);">Ce qui rend notre service unique</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-cogs"></i> Conception personnalisée</li>
-      <li><i class="fas fa-code-branch"></i> Technologies open-source & robustes</li>
-      <li><i class="fas fa-shield-alt"></i> Forte culture de la sécurité des données</li>
-      <li><i class="fas fa-chalkboard-teacher"></i> Accompagnement pédagogique des utilisateurs</li>
+      <li> Conception personnalisée</li>
+      <li>Technologies open-source & robustes</li>
+      <li>Forte culture de la sécurité des données</li>
+      <li>Accompagnement pédagogique des utilisateurs</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour bénéficier de votre solution sur mesure :<br>
