--- a/erp.html
+++ b/erp.html
@@ -147,13 +147,13 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-network-wired"></i> Service ERP (Enterprise Resource Planning)</div>
+    <div class="service-title">Service ERP (Enterprise Resource Planning)</div>
     <div class="service-intro">Pourquoi un ERP sur mesure ?<br>Parce que gérer efficacement toutes les ressources de votre entreprise nécessite une solution intégrée, flexible et adaptée à vos spécificités métiers. Notre ERP centralise vos données et automatise vos processus pour une meilleure prise de décision et une optimisation opérationnelle.</div>
-    <div class="service-section-title"><i class="fas fa-cogs"></i> Notre approche : intégration, personnalisation & pilotage global</div>
+    <div class="service-section-title">Notre approche : intégration, personnalisation & pilotage global</div>
     <ol class="service-steps">
       <li class="service-step">
         <div class="service-step-num">1</div>
-        <div class="service-step-title"><i class="fas fa-search"></i> Analyse des processus métiers</div>
+        <div class="service-step-title">Analyse des processus métiers</div>
         <ul>
           <li>Recueil des besoins des différents départements (achat, vente, production, finance, RH…)</li>
           <li>Cartographie des flux et identification des points d’amélioration</li>
@@ -162,7 +162,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">2</div>
-        <div class="service-step-title"><i class="fas fa-project-diagram"></i> Conception et développement</div>
+        <div class="service-step-title">Conception et développement</div>
         <ul>
           <li>Choix d’une plateforme ERP adaptée (OpenERP, Odoo, SAP Business One, ou solution propriétaire)</li>
           <li>Personnalisation des modules selon vos besoins spécifiques</li>
@@ -171,7 +171,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">3</div>
-        <div class="service-step-title"><i class="fas fa-cloud-upload-alt"></i> Déploiement & formation</div>
+        <div class="service-step-title">Déploiement & formation</div>
         <ul>
           <li>Installation sur site ou en cloud sécurisé</li>
           <li>Migration des données existantes</li>
@@ -180,7 +180,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">4</div>
-        <div class="service-step-title"><i class="fas fa-sync-alt"></i> Suivi & évolution</div>
+        <div class="service-step-title">Suivi & évolution</div>
         <ul>
           <li>Support technique réactif</li>
           <li>Mises à jour fonctionnelles régulières</li>
@@ -188,12 +188,12 @@
         </ul>
       </li>
     </ol>
-    <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Ce qui rend notre ERP unique</div>
+    <div class="service-section-title" style="color:var(--vert);">Ce qui rend notre ERP unique</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-layer-group"></i> Solution modulable et évolutive</li>
-      <li><i class="fas fa-desktop"></i> Interface intuitive adaptée aux utilisateurs locaux</li>
-      <li><i class="fas fa-link"></i> Intégration fluide avec vos autres outils (CRM, comptabilité, gestion de stock)</li>
-      <li><i class="fas fa-user-graduate"></i> Accompagnement personnalisé et formation continue</li>
+      <li>Solution modulable et évolutive</li>
+      <li>Interface intuitive adaptée aux utilisateurs locaux</li>
+      <li>Intégration fluide avec vos autres outils (CRM, comptabilité, gestion de stock)</li>
+      <li>Accompagnement personnalisé et formation continue</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour optimiser la gestion de votre entreprise avec un ERP performant :<br>
