--- a/ia.html
+++ b/ia.html
@@ -110,30 +110,30 @@
         <li><a href="index.html" class="nav-link">Accueil</a></li>
         <li><a href="a-propos.html" class="nav-link">À propos</a></li>
         <li class="nav-item">
-          <a href="formations.html" class="nav-link">Formations <i class="fas fa-chevron-down"></i></a>
+          <a href="formations.html" class="nav-link">Formations </a>
           <ul class="submenu">
-            <li><a href="robotique.html" class="submenu-link"><i class="fas fa-robot"></i> Robotique</a></li>
-            <li><a href="impression_3D.html" class="submenu-link"><i class="fas fa-print"></i> Impression 3D</a></li>
-            <li><a href="cybersecurite.html" class="submenu-link"><i class="fas fa-shield-alt"></i> Cybersécurité</a></li>
+            <li><a href="robotique.html" class="submenu-link">Robotique</a></li>
+            <li><a href="impression_3D.html" class="submenu-link">Impression 3D</a></li>
+            <li><a href="cybersecurite.html" class="submenu-link">Cybersécurité</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a href="marketing.html" class="nav-link">Marketing <i class="fas fa-chevron-down"></i></a>
+          <a href="marketing.html" class="nav-link">Marketing </a>
           <ul class="submenu">
-            <li><a href="audit_express.html" class="submenu-link"><i class="fas fa-search"></i> Audit Express</a></li>
-            <li><a href="site.html" class="submenu-link"><i class="fas fa-laptop-code"></i> Création/Réfonte de site</a></li>
-            <li><a href="strategie_digitale.html" class="submenu-link"><i class="fas fa-chess"></i> Stratégie digitale</a></li>
-            <li><a href="seo.html" class="submenu-link"><i class="fas fa-search-plus"></i> Référencement naturel</a></li>
-            <li><a href="seo.html" class="submenu-link"><i class="fas fa-hashtag"></i> Réseaux sociaux</a></li>
+            <li><a href="audit_express.html" class="submenu-link">Audit Express</a></li>
+            <li><a href="site.html" class="submenu-link">Création/Réfonte de site</a></li>
+            <li><a href="strategie_digitale.html" class="submenu-link">Stratégie digitale</a></li>
+            <li><a href="seo.html" class="submenu-link">Référencement naturel</a></li>
+            <li><a href="seo.html" class="submenu-link">Réseaux sociaux</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a href="accompagnement.html" class="nav-link">Accompagnement <i class="fas fa-chevron-down"></i></a>
+          <a href="accompagnement.html" class="nav-link">Accompagnement</a>
           <ul class="submenu">
-            <li><a href="automatisation.html" class="submenu-link"><i class="fas fa-cogs"></i> Automatisation</a></li>
-            <li><a href="base_donnee.html" class="submenu-link"><i class="fas fa-database"></i> Bases de données</a></li>
-            <li><a href="erp.html" class="submenu-link"><i class="fas fa-network-wired"></i> ERP</a></li>
-            <li><a href="intelligence_artificielle.html" class="submenu-link"><i class="fas fa-brain"></i> Intelligence Artificielle</a></li>
+            <li><a href="automatisation.html" class="submenu-link">Automatisation</a></li>
+            <li><a href="base_donnee.html" class="submenu-link">Bases de données</a></li>
+            <li><a href="erp.html" class="submenu-link">ERP</a></li>
+            <li><a href="intelligence_artificielle.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
         <li><a href="blog.html" class="nav-link">Actualités</a></li>
@@ -148,13 +148,13 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-brain"></i> Intelligence Artificielle (IA)</div>
+    <div class="service-title">Intelligence Artificielle (IA)</div>
     <div class="service-intro">Pourquoi intégrer l’intelligence artificielle ?<br>Pour anticiper, recommander et décider plus intelligemment. Nous concevons des modèles IA qui transforment vos données en leviers d’action.</div>
-    <div class="service-section-title"><i class="fas fa-cogs"></i> Notre approche : science des données, éthique & résultats concrets</div>
+    <div class="service-section-title">Notre approche : science des données, éthique & résultats concrets</div>
     <ol class="service-steps">
       <li class="service-step">
         <div class="service-step-num">1</div>
-        <div class="service-step-title"><i class="fas fa-lightbulb"></i> Identification des cas d’usage pertinents</div>
+        <div class="service-step-title">Identification des cas d’usage pertinents</div>
         <ul>
           <li>Prédiction de comportements clients</li>
           <li>Détection d’anomalies</li>
@@ -164,7 +164,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">2</div>
-        <div class="service-step-title"><i class="fas fa-database"></i> Constitution et traitement des données</div>
+        <div class="service-step-title">Constitution et traitement des données</div>
         <ul>
           <li>Collecte, nettoyage, structuration</li>
           <li>Enrichissement & normalisation</li>
@@ -173,7 +173,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">3</div>
-        <div class="service-step-title"><i class="fas fa-brain"></i> Modélisation & entraînement</div>
+        <div class="service-step-title">Modélisation & entraînement</div>
         <ul>
           <li>Sélection d’algorithmes adaptés (Machine Learning / Deep Learning)</li>
           <li>Entraînement & validation croisée</li>
@@ -182,7 +182,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">4</div>
-        <div class="service-step-title"><i class="fas fa-rocket"></i> Intégration et déploiement</div>
+        <div class="service-step-title">Intégration et déploiement</div>
         <ul>
           <li>API IA / microservices</li>
           <li>Intégration dans vos outils ou applications web</li>
@@ -190,12 +190,12 @@
         </ul>
       </li>
     </ol>
-    <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Ce qui rend notre IA différente</div>
+    <div class="service-section-title" style="color:var(--vert);">Ce qui rend notre IA différente</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-bullseye"></i> Orientée résultats, pas buzzword</li>
-      <li><i class="fas fa-eye"></i> Transparence et traçabilité des modèles</li>
-      <li><i class="fas fa-user-tie"></i> Expertise humaine au cœur des décisions</li>
-      <li><i class="fas fa-globe-africa"></i> Adaptée aux réalités africaines et francophones</li>
+      <li>Orientée résultats, pas buzzword</li>
+      <li>Transparence et traçabilité des modèles</li>
+      <li>Expertise humaine au cœur des décisions</li>
+      <li>Adaptée aux réalités africaines et francophones</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour intégrer l’IA à vos projets :<br>
