--- a/reseaux_sociaux.html
+++ b/reseaux_sociaux.html
@@ -144,13 +144,13 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-hashtag"></i> Notre Stratégie Réseaux Sociaux</div>
+    <div class="service-title">Notre Stratégie Réseaux Sociaux</div>
     <div class="service-intro">Pourquoi une stratégie réseaux sociaux claire et structurée&nbsp;?<br>Une présence professionnelle sur les réseaux sociaux est indispensable pour attirer, engager et fidéliser votre audience. Elle permet de diffuser des messages pertinents, cohérents et alignés à votre marque, tout en développant votre notoriété et votre communauté.</div>
-    <div class="service-section-title"><i class="fas fa-cogs"></i> Nos 5 Piliers Stratégiques</div>
+    <div class="service-section-title">Nos 5 Piliers Stratégiques</div>
     <ol class="service-steps">
       <li class="service-step">
         <div class="service-step-num">1</div>
-        <div class="service-step-title"><i class="fas fa-users"></i> Définition claire des cibles</div>
+        <div class="service-step-title">Définition claire des cibles</div>
         <ul>
           <li>Création de personas précis et pertinents</li>
           <li>Analyse détaillée des besoins et comportements digitaux des utilisateurs</li>
@@ -158,7 +158,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">2</div>
-        <div class="service-step-title"><i class="fas fa-bullhorn"></i> Positionnement éditorial cohérent</div>
+        <div class="service-step-title">Positionnement éditorial cohérent</div>
         <ul>
           <li>Définition du ton (équilibre entre sérieux institutionnel et proximité chaleureuse)</li>
           <li>Définition des thématiques prioritaires alignées avec vos objectifs stratégiques</li>
@@ -166,7 +166,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">3</div>
-        <div class="service-step-title"><i class="fas fa-calendar-alt"></i> Calendrier éditorial stratégique</div>
+        <div class="service-step-title"> Calendrier éditorial stratégique</div>
         <ul>
           <li>Planification annuelle avec vision claire des contenus à produire</li>
           <li>Adaptation saisonnière selon l’actualité et les tendances</li>
@@ -175,7 +175,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">4</div>
-        <div class="service-step-title"><i class="fas fa-pen-nib"></i> Production de contenus optimisés et engageants</div>
+        <div class="service-step-title">Production de contenus optimisés et engageants</div>
         <ul>
           <li>Posts, vidéos, infographies, carrousels, stories, lives</li>
           <li>SEO intégré&nbsp;: mots-clés stratégiques, hashtags pertinents, maillage interne efficace</li>
@@ -184,7 +184,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">5</div>
-        <div class="service-step-title"><i class="fas fa-share-alt"></i> Diffusion optimisée multi-canaux</div>
+        <div class="service-step-title">iffusion optimisée multi-canaux</div>
         <ul>
           <li>Choix des plateformes selon la cible (LinkedIn, Facebook, Instagram, WhatsApp, etc.)</li>
           <li>Utilisation d’outils professionnels (Buffer, Hootsuite) pour une diffusion régulière et automatisée</li>
@@ -192,17 +192,17 @@
         </ul>
       </li>
     </ol>
-    <div class="service-section-title"><i class="fas fa-chart-bar"></i> Suivi des performances éditoriales</div>
+    <div class="service-section-title">Suivi des performances éditoriales</div>
     <ul class="service-unique-list">
-      <li><i class="fab fa-google"></i> Utilisation de Google Analytics et des insights réseaux sociaux pour suivre l’engagement</li>
-      <li><i class="fas fa-chart-line"></i> Reporting régulier pour ajuster les stratégies en fonction des résultats</li>
-      <li><i class="fas fa-vial"></i> Tests A/B continus pour améliorer la performance éditoriale</li>
+      <li>Utilisation de Google Analytics et des insights réseaux sociaux pour suivre l’engagement</li>
+      <li>Reporting régulier pour ajuster les stratégies en fonction des résultats</li>
+      <li> Tests A/B continus pour améliorer la performance éditoriale</li>
     </ul>
-    <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Ce qui nous distingue</div>
+    <div class="service-section-title" style="color:var(--vert);">Ce qui nous distingue</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-check-circle"></i> Approche structurée inspirée des meilleures pratiques internationales</li>
-      <li><i class="fas fa-globe-africa"></i> Adaptation stratégique au contexte africain et local</li>
-      <li><i class="fas fa-file-signature"></i> Livrables clairs, professionnels et immédiatement actionnables</li>
+      <li>Approche structurée inspirée des meilleures pratiques internationales</li>
+      <li>Adaptation stratégique au contexte africain et local</li>
+      <li>Livrables clairs, professionnels et immédiatement actionnables</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour dynamiser votre présence sur les réseaux sociaux&nbsp;:<br>
