--- a/seo.html
+++ b/seo.html
@@ -123,7 +123,7 @@
             <li><a href="site.html" class="submenu-link">Création/Réfonte de site</a></li>
             <li><a href="strategie_digitale.html" class="submenu-link">Stratégie digitale</a></li>
             <li><a href="seo.html" class="submenu-link">Référencement naturel</a></li>
-            <li><a href="seo.html" class="submenu-link">Réseaux sociaux</a></li>
+            <li><a href="reseaux_sociaux.html" class="submenu-link">Réseaux sociaux</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -147,13 +147,13 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-search"></i> Notre Stratégie SEO</div>
+    <div class="service-title">Notre Stratégie SEO</div>
     <div class="service-intro">Pourquoi investir dans le référencement naturel (SEO) ?<br>Un bon référencement naturel est crucial pour augmenter durablement votre visibilité en ligne, générer du trafic qualifié et booster vos conversions sans dépendre uniquement de la publicité payante.</div>
-    <div class="service-section-title"><i class="fas fa-cogs"></i> Notre approche structurée en 5 étapes</div>
+    <div class="service-section-title">Notre approche structurée en 5 étapes</div>
     <ol class="service-steps">
       <li class="service-step">
         <div class="service-step-num">1</div>
-        <div class="service-step-title"><i class="fas fa-search"></i> Audit Complet</div>
+        <div class="service-step-title">Audit Complet</div>
         <ul>
           <li>Audit technique approfondi (Google Search Console, PageSpeed Insights, W3C)</li>
           <li>Audit sémantique (recherche de mots-clés stratégiques, analyse concurrentielle)</li>
@@ -162,7 +162,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">2</div>
-        <div class="service-step-title"><i class="fas fa-bullseye"></i> Définition d'objectifs SMART</div>
+        <div class="service-step-title">Définition d'objectifs SMART</div>
         <ul>
           <li>SEO comme levier de performance commerciale, notoriété digitale et expérience utilisateur</li>
           <li>Objectifs clairs et mesurables : augmentation du trafic, amélioration du positionnement</li>
@@ -170,7 +170,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">3</div>
-        <div class="service-step-title"><i class="fas fa-tools"></i> Optimisations Techniques et Éditoriales</div>
+        <div class="service-step-title">Optimisations Techniques et Éditoriales</div>
         <ul>
           <li>Optimisation de la vitesse de chargement et de l'expérience utilisateur (UX)</li>
           <li>Refonte des balises (title, meta-description, Hn)</li>
@@ -179,7 +179,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">4</div>
-        <div class="service-step-title"><i class="fas fa-calendar-alt"></i> Stratégie de Contenus</div>
+        <div class="service-step-title">Stratégie de Contenus</div>
         <ul>
           <li>Calendrier éditorial précis avec des contenus réguliers et optimisés</li>
           <li>Production de contenus pertinents (articles de blog, vidéos pédagogiques)</li>
@@ -188,7 +188,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">5</div>
-        <div class="service-step-title"><i class="fas fa-link"></i> Développement de la popularité (Netlinking)</div>
+        <div class="service-step-title">Développement de la popularité (Netlinking)</div>
         <ul>
           <li>Création de partenariats stratégiques pour des backlinks de qualité</li>
           <li>Monitoring constant via outils spécialisés (SEMrush, Moz)</li>
@@ -196,20 +196,20 @@
         </ul>
       </li>
     </ol>
-    <div class="service-section-title"><i class="fas fa-tools"></i> Nos Outils Professionnels</div>
+    <div class="service-section-title"> Nos Outils Professionnels</div>
     <ul class="service-unique-list">
-      <li><i class="fab fa-google"></i> Google Search Console (analyse du trafic et positionnement)</li>
-      <li><i class="fab fa-google"></i> Google Analytics (suivi du comportement utilisateur)</li>
-      <li><i class="fas fa-chart-line"></i> SEMrush (analyse concurrentielle et stratégie de mots-clés)</li>
-      <li><i class="fas fa-chart-bar"></i> Moz (autorité de domaine et suivi du netlinking)</li>
-      <li><i class="fas fa-tachometer-alt"></i> PageSpeed Insights & W3C (optimisation technique)</li>
+      <li>Google Search Console (analyse du trafic et positionnement)</li>
+      <li>Google Analytics (suivi du comportement utilisateur)</li>
+      <li>SEMrush (analyse concurrentielle et stratégie de mots-clés)</li>
+      <li>Moz (autorité de domaine et suivi du netlinking)</li>
+      <li>PageSpeed Insights & W3C (optimisation technique)</li>
     </ul>
-    <div class="service-section-title"><i class="fas fa-chart-bar"></i> KPI suivis pour mesurer la performance</div>
+    <div class="service-section-title">KPI suivis pour mesurer la performance</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-key"></i> Positionnement des mots-clés principaux</li>
-      <li><i class="fas fa-mouse-pointer"></i> Taux de clic (CTR), impressions et trafic organique</li>
-      <li><i class="fas fa-file-signature"></i> Demandes de devis, contacts directs depuis le site</li>
-      <li><i class="fas fa-percentage"></i> Taux de conversion et retour sur investissement marketing (ROMI)</li>
+      <li>Positionnement des mots-clés principaux</li>
+      <li>Taux de clic (CTR), impressions et trafic organique</li>
+      <li>Demandes de devis, contacts directs depuis le site</li>
+      <li>Taux de conversion et retour sur investissement marketing (ROMI)</li>
     </ul>
     <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Pourquoi choisir Porokhane Digital Consulting ?</div>
     <ul class="service-unique-list">
